--- a/assets/style/user.css
+++ b/assets/style/user.css
@@ -16,6 +16,13 @@
     right: 0;
 }
 
+#canvasCoverAnimation {
+    position: absolute;
+    display: block;
+    background-color: red;
+
+}
+
 #item {
     margin-top: 25px;
     margin-left: 25px;
@@ -45,7 +52,6 @@
 }
 
 #trackArtist {
-    /* margin-top: 10px; */
     font-size: 10px;
     font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji";
     color: rgb(148, 148, 148);
