--- a/assets/style/user.css
+++ b/assets/style/user.css
@@ -76,6 +76,33 @@
     display: none;
 }
 
+#currPlayingSubContainer {
+    position: absolute;
+    margin-top: 70px;
+    margin-left: 360px;
+    /* margin-right: 355px; */
+}
+
+#currPlayingIcon {
+    display: inline-block;
+    margin-right: 10px;
+    width: 28px;
+    filter: contrast(0);
+}
+
+#currPlayingContainer {
+    display: inline-block;
+    text-align: left;
+    color: white;
+    font-size: 12px;
+    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji";
+}
+
+#currPlayingItemAuthor {
+    color: rgb(126, 126, 126);
+    font-style: italic;
+}
+
 #userPfp {
     margin-top: 40px;
     margin-left: 110px;
@@ -96,7 +123,7 @@
 
 #userName {
     position: absolute;
-    margin-top: 125px;
+    margin-top: 132px;
     margin-left: 355px;
     color: white;
     font-size: 80px;
