--- a/assets/style/user.css
+++ b/assets/style/user.css
@@ -76,11 +76,34 @@
     display: none;
 }
 
+#settingConfig1 {
+    margin-left: 20px;
+    text-align: left;
+}
+
+#settingDesc1 {
+    margin-top: 10px;
+    color: rgb(120, 120, 120);
+    font-size: 15px;
+    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji";
+    font-style: italic;
+}
+
+#settingHeading1 {
+    margin-bottom: 10px;
+    color: white;
+    font-size: 20px;
+    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji";
+}
+
+#submitButton {
+    margin-top: 10px;
+}
+
 #currPlayingSubContainer {
     position: absolute;
     margin-top: 70px;
     margin-left: 360px;
-    /* margin-right: 355px; */
 }
 
 #currPlayingIcon {
