--- a/assets/style/user.css
+++ b/assets/style/user.css
@@ -64,13 +64,16 @@
 }
 
 #moodBoard {
-    display: block;
+    display: none;
 }
 #playlists {
     display: none;
 }
-#user {
+#player {
     display: none;
+}
+#user {
+    display: block;
 }
 #settings {
     display: none;
