--- a/assets/style/user.css
+++ b/assets/style/user.css
@@ -16,11 +16,52 @@
     right: 0;
 }
 
-#canvasCoverAnimation {
-    position: absolute;
-    display: block;
-    background-color: red;
+#playbackMixerContainer {
+    position: fixed;
+    margin-right: 100px;
+    z-index: 5;
+    bottom: 0;
+    right: 0;
+    width: 300px;
+    height: 60px;
+    background: rgb(29, 27, 34);
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
+}
 
+#playbackMixerBg {
+    position: absolute;
+    height: 60px;
+    right: 0;
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
+}
+
+#playbackMixerInteract {
+    position: absolute;
+    margin-top: 10px;
+    margin-left: 10px;
+    width: 37px;
+    filter: invert(1);
+}
+
+#playbackMixerTrackName {
+    position: absolute;
+    margin-top: 10px;
+    margin-left: 60px;
+    color: white;
+    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji";
+    font-style: bold;
+    font-size: 16px;
+}
+
+#playbackMixerArtistName {
+    position: absolute;
+    margin-top: 30px;
+    margin-left: 60px;
+    color: rgb(194, 194, 194);
+    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji";
+    font-size: 12px;
 }
 
 #item {
@@ -55,6 +96,12 @@
     font-size: 10px;
     font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji";
     color: rgb(148, 148, 148);
+}
+
+#trackLength {
+    position: absolute;
+    margin-left: 250px;
+    font-size: 13px;
 }
 
 #playlistContent {
